2016-06-03 0.8.2 alpha
Add the "restart fluidsynth" action.

2016-06-02 0.8.2 alpha
Add option to change note colors.

2016-06-01 0.8.2 alpha
Initial event modifier and event filter stub.

2016-05-31 0.8.2 alpha
Update documentation.

2016-05-30 0.8.2 alpha
Added an option to change font size used by the visualization.

2016-05-29 0.8.2 alpha
Allow disabling soundfonts in the soundfont setting tab.

2016-05-28 0.8.2 alpha
Add option to tweak the OSD. More info shown in the OSD.
Bump version. We have stayed at 0.8.1 for a long time
and the visualization plugin is almost fully functional now.

2016-05-27 0.8.1 alpha
Compute coordinates of pitch-bent notes more precisely.
Also load resources from system-wide folder.

2016-05-26 0.8.1 alpha
Keyboard for 2D visualization.

2016-05-25 0.8.1 alpha
Horizontal 2D visualization.

2016-05-24 0.8.1 alpha
Add seeking with arrow buttons in visualization.
Correct return result of API functions when text encoding is set to Unicode.
Use QPointer to store pointer to dialogs to avoid crashes.
(However crashes related to dbus are still not resolved.)

2016-05-23 0.8.1 alpha
Add horizontal visualization mode.
Add build date in version page.

2016-05-21 0.8.1 alpha
Use QDirIterator instead, fixing plugin loading problems in Windows.
Also scale UI elements.

2016-05-20 0.8.1 alpha
Scale GUI correctly on a high DPI device.
Fix building for Windows. RC-bugs still exist.

2016-05-19 0.8.1 alpha
Added a sample plugin as a template.
Implemented scanPlugin for Windows.

2016-05-18 0.8.1 alpha
Finally finish the particle system integration.
Add std::wstring version APIs to avoid wrong encoding.
Update documentation.

2016-05-17 0.8.1 alpha
Fix bugs in the particle system.
Add particle look at option.

2016-05-16 0.8.1 alpha
Finish the particle system.
It should become a part of SMELT someday.

2016-05-15 0.8.1 alpha
Initial stubs for the particle system.
Use layouts in the effects window.

2016-05-14 0.8.1 alpha